# real-time-streaming-profiler

./: .gitignore  README.md  build_push.sh  package-lock.json  package.json  svelte.config.js
.github/workflows/: deploy.yml  sinkru-docker.yml
sinkru/: Cargo.toml  Dockerfile
sinkru/src/: handlers.rs  lib.rs  main.rs  messages.rs
sinkru/src/actors/: feed_actor.rs  mod.rs  sink_actor.rs  sink_manager.rs
src/: App.svelte  app.css
src/lib/: RightArrow.svelte  Row.svelte  Table.svelte  db.ts  event.ts  firebase.ts  types.ts  utils.ts
src/lib/components/: AsyncButton.svelte  Dashboard.svelte  DashboardForm.svelte  Dashboards.svelte  DownArrow.svelte  Main.svelte  RightArrow.svelte  Row.svelte  Table.svelte  TableWithMinMax.svelte  ThemeToggler.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/share/: +page.svelte
src/routes/view/: +page.svelte  +page.ts
src/routes/view/[data]/: +page.svelte  +page.ts
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web/src/: app.css
web/src/lib/: db.ts  diff.ts  event.ts  eventSource.svelte.ts  firebase.ts  types.ts  utils.test.ts  utils.ts
web/src/lib/attachments/: CloseOnClickOutside.ts  Tooltip.ts
web/src/lib/components/: BenchmarkSelector.svelte  ControlPanel.svelte  CopyButton.svelte  Dashboard.svelte  DashboardForm.svelte  Dashboards.svelte  Dialog.svelte  DiffRow.svelte  DiffTable.svelte  DiffToolbar.svelte  DownArrow.svelte  LiveIndicator.svelte  Main.svelte  Row.svelte  Table.svelte  TableWithMinMax.svelte  ThemeToggler.svelte
web/src/routes/: +layout.svelte  +page.svelte
(+3 files in other folders)
