[package]
name = "sinkru"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-sse = "0.1.0"
actix-web = "4.13.0"
actix-web-actors = "4.3.1"
anyhow = "1.0.102"
dotenv = "0.15.0"
env_logger = "0.11.10"
log = "0.4.30"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.150"
tokio = "1.52.3"
tokio-stream = "0.1.18"
uuid = { version = "1.23.2", features = ["v4"] }
